@@ -4,7 +4,10 @@ import org.telegram.telegrambots.bots.TelegramLongPollingBot;
 import org.telegram.telegrambots.meta.api.methods.AnswerCallbackQuery;
 import org.telegram.telegrambots.meta.api.methods.updatingmessages.EditMessageText;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
-import org.telegram.telegrambots.meta.api.objects.*;
+import org.telegram.telegrambots.meta.api.objects.CallbackQuery;
+import org.telegram.telegrambots.meta.api.objects.Message;
+import org.telegram.telegrambots.meta.api.objects.Update;
+import org.telegram.telegrambots.meta.api.objects.User;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 import org.telegram.telegrambots.meta.api.objects.replykeyboard.ReplyKeyboardMarkup;
@@ -14,11 +17,13 @@ import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.Keyboard
 import java.util.*;
 
 public class ServiceBot extends TelegramLongPollingBot {
+    // --- O'zingiz kerak deb topgan token/usernameni shu yerda saqlang ---
     private static final String BOT_TOKEN = "8495297601:AAF-h1qu1XugDGG6pYD_brlbv_FPTIxTZHs";
     private static final String BOT_USERNAME = "edu_serve_bot";
     private static final String DEFAULT_PROMO = "SYNOPSIS_2026";
     private static final String BACK_TO_MAIN = "⬅ Bosh menuga qaytish";
 
+    // state maps
     private final Map<String, String> selectedService = new HashMap<>();
     private final Map<String, String> tempAnswers = new HashMap<>();
     private final Map<String, Integer> pageCount = new HashMap<>();
@@ -37,6 +42,7 @@ public class ServiceBot extends TelegramLongPollingBot {
                 handleCallback(update.getCallbackQuery());
                 return;
             }
+
             if (!update.hasMessage()) return;
             Message msg = update.getMessage();
             if (!msg.hasText()) return;
@@ -44,16 +50,22 @@ public class ServiceBot extends TelegramLongPollingBot {
             String text = msg.getText().trim();
             String chatId = String.valueOf(msg.getChatId());
             User from = msg.getFrom();
+            String username = (from.getUserName() != null ? "@" + from.getUserName() : from.getFirstName());
 
-            // Admin bilan yozish holati
+            // ensure user recorded in DB (if you have such logic)
+            try { Config.upsertUser(msg.getChatId(), from.getUserName(), from.getFirstName()); } catch (Exception ignored) {}
+
+            // Admin-chat mode
             if (chattingWithAdmin.getOrDefault(chatId, false)) {
                 if (text.equalsIgnoreCase(BACK_TO_MAIN)) {
                     chattingWithAdmin.put(chatId, false);
                     handleStart(chatId, from);
                     return;
                 }
+                // forward message to admin
                 String msgToAdmin = "📩 *Foydalanuvchidan xabar:*\n"
                         + "👤 Ism: " + from.getFirstName() + "\n"
+                        + "🔗 Username: " + username + "\n"
                         + "💬 ChatId: " + chatId + "\n"
                         + "📝 Xabar: " + text;
                 AdminBot.notifyAdmin(msgToAdmin);
@@ -61,6 +73,71 @@ public class ServiceBot extends TelegramLongPollingBot {
                 return;
             }
 
+            // if user currently selected a service and we expect further text input
+            if (selectedService.containsKey(chatId)) {
+                String svc = selectedService.get(chatId);
+                switch (svc) {
+                    case "Konspekt yozish" -> {
+                        // when user selected konspekt, we handle entirely with inline buttons.
+                        if (!pageCount.containsKey(chatId)) {
+                            pageCount.put(chatId, 2);
+                            sendKonspektInline(chatId);
+                            return;
+                        } else {
+                            sendText(chatId, "📘 Betlar sonini inline tugmalar orqali belgilang yoki /start bosing.");
+                            return;
+                        }
+                    }
+                    case "Uyga vazifa" -> {
+                        if (!tempAnswers.containsKey(chatId)) {
+                            tempAnswers.put(chatId, text); // fan
+                            sendText(chatId, "✍️ Endi mavzuni kiriting:");
+                            return;
+                        } else {
+                            String fan = tempAnswers.remove(chatId);
+                            String mavzu = text;
+                            // create request and notify admin
+                            try { Config.createRequest(Long.parseLong(chatId), "Uyga vazifa", fan + " | " + mavzu); } catch (Exception ignored) {}
+                            String msgToAdmin = "📚 Uyga vazifa\n"
+                                    + "👤 Ism: " + from.getFirstName() + "\n"
+                                    + "🔗 Username: " + username + "\n"
+                                    + "💬 ChatId: " + chatId + "\n"
+                                    + "📘 Fan: " + fan + "\n"
+                                    + "🧾 Mavzu: " + mavzu;
+                            AdminBot.notifyAdmin(msgToAdmin);
+                            sendText(chatId, "✅ Uyga vazifa yuborildi.\nAdminga xabar berildi.\n👤 Username: " + username);
+                            selectedService.remove(chatId);
+                            return;
+                        }
+                    }
+                    case "Loyha ishlari" -> {
+                        // single message is the project description
+                        try { Config.createRequest(Long.parseLong(chatId), "Loyha ishlari", text); } catch (Exception ignored) {}
+                        String msgToAdmin = "🧩 Loyha ishlari\n"
+                                + "👤 Ism: " + from.getFirstName() + "\n"
+                                + "🔗 Username: " + username + "\n"
+                                + "💬 ChatId: " + chatId + "\n"
+                                + "📄 Tavsif: " + text;
+                        AdminBot.notifyAdmin(msgToAdmin);
+                        sendText(chatId, "✅ Loyha ma’lumoti yuborildi.\n👤 Username: " + username);
+                        selectedService.remove(chatId);
+                        return;
+                    }
+                    case "Slayd yasab berish" -> {
+                        if (!tempAnswers.containsKey(chatId)) {
+                            tempAnswers.put(chatId, text); // topic
+                            pageCount.put(chatId, 2);
+                            sendSlidesInline(chatId, text);
+                            return;
+                        } else {
+                            sendText(chatId, "🎞 Slayd holati: inline tugmalar orqali slayd sonini belgilang yoki /start bosing.");
+                            return;
+                        }
+                    }
+                }
+            }
+
+            // Main command handling
             switch (text) {
                 case "/start" -> handleStart(chatId, from);
                 case "Promo Code" -> sendText(chatId, "🔑 Iltimos, promo kodni kiriting:");
@@ -71,14 +148,39 @@ public class ServiceBot extends TelegramLongPollingBot {
                     sendTextWithKeyboard(chatId, "✍️ Xabaringizni yozing. Adminga yuboriladi.\n\n" + BACK_TO_MAIN, backKeyboard());
                 }
                 case BACK_TO_MAIN -> handleStart(chatId, from);
-                default -> sendText(chatId, "❌ Men bu buyruqni tushunmadim. Menudan tanlang yoki /start bosing.");
+                default -> {
+                    // promo code match or unknown
+                    if (text.equalsIgnoreCase(DEFAULT_PROMO)) {
+                        try { Config.setPromoUsed(Long.parseLong(chatId), true); } catch (Exception ignored) {}
+                        sendText(chatId, "✅ Promo kod qabul qilindi! Adminga habar yuborildi.");
+                        AdminBot.notifyAdmin("📩 Promo ishlatildi!\nFoydalanuvchi: " + from.getFirstName() + " id=" + chatId);
+                    } else if (text.equalsIgnoreCase("Konspekt yozish")) {
+                        selectedService.put(chatId, "Konspekt yozish");
+                        pageCount.put(chatId, 2);
+                        sendText(chatId, "📘 Siz Konspekt yozish xizmatini tanladingiz.\n👤 Username: " + username);
+                        sendKonspektInline(chatId);
+                    } else if (text.equalsIgnoreCase("Uyga vazifa")) {
+                        selectedService.put(chatId, "Uyga vazifa");
+                        tempAnswers.remove(chatId);
+                        sendText(chatId, "✍️ Qaysi fan uchun uyga vazifa kerak?\n👤 Username: " + username);
+                    } else if (text.equalsIgnoreCase("Loyha ishlari")) {
+                        selectedService.put(chatId, "Loyha ishlari");
+                        sendText(chatId, "🧩 Loyha haqida qisqacha yozing.\n👤 Username: " + username);
+                    } else if (text.equalsIgnoreCase("Slayd yasab berish")) {
+                        selectedService.put(chatId, "Slayd yasab berish");
+                        tempAnswers.remove(chatId);
+                        sendText(chatId, "📑 Qaysi mavzu uchun slayd kerak?\n👤 Username: " + username);
+                    } else {
+                        sendText(chatId, "❌ Men bu buyruqni tushunmadim. Menudan tanlang yoki /start bosing.");
+                    }
+                }
             }
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
-    // ==== CALLBACKLAR ====
+    // ==== CALLBACK HANDLER ====
     private void handleCallback(CallbackQuery cq) {
         try {
             String data = cq.getData();
@@ -87,19 +189,47 @@ public class ServiceBot extends TelegramLongPollingBot {
             int current = pageCount.getOrDefault(chatId, 2);
             User user = cq.getFrom();
             String firstName = user.getFirstName();
+            String username = (user.getUserName() != null ? "@" + user.getUserName() : "—");
 
-            switch (data) {
-                case "inc" -> {
-                    current += 2;
-                    pageCount.put(chatId, current);
-                    editInlineCount(chatId, messageId, current);
-                }
-                case "dec" -> {
-                    if (current > 2) current -= 2;
-                    pageCount.put(chatId, current);
-                    editInlineCount(chatId, messageId, current);
-                }
+            if (data.equals("inc")) {
+                current += 2;
+                pageCount.put(chatId, current);
+                editInlineCount(chatId, messageId, current);
+            } else if (data.equals("dec")) {
+                if (current > 2) current -= 2;
+                pageCount.put(chatId, current);
+                editInlineCount(chatId, messageId, current);
+            } else if (data.equals("confirm_konspekt")) {
+                String service = "Konspekt yozish";
+                int pages = pageCount.getOrDefault(chatId, 2);
+                try { Config.createRequest(Long.parseLong(chatId), service, "Betlar: " + pages); } catch (Exception ignored) {}
+
+                String msgToAdmin = "📘 *Konspekt so‘rovi*\n"
+                        + "👤 Ism: " + firstName + "\n"
+                        + "🔗 Username: " + username + "\n"
+                        + "💬 ChatId: " + chatId + "\n"
+                        + "📄 Betlar: " + pages;
+                AdminBot.notifyAdmin(msgToAdmin);
+
+                sendText(chatId, "✅ Konspekt uchun so‘rovingiz adminga yuborildi!");
+                clearState(chatId);
+            } else if (data.equals("confirm_slides")) {
+                String topic = tempAnswers.getOrDefault(chatId, "Mavzu");
+                int slides = pageCount.getOrDefault(chatId, 2);
+                try { Config.createRequest(Long.parseLong(chatId), "Slayd yasab berish", topic + " | Slaydlar: " + slides); } catch (Exception ignored) {}
+
+                String msgToAdmin = "🎞 *Slayd so‘rovi*\n"
+                        + "👤 Ism: " + firstName + "\n"
+                        + "🔗 Username: " + username + "\n"
+                        + "💬 ChatId: " + chatId + "\n"
+                        + "🧾 Mavzu: " + topic + "\n"
+                        + "📊 Slaydlar: " + slides;
+                AdminBot.notifyAdmin(msgToAdmin);
+
+                sendText(chatId, "✅ Slaydlar bo‘yicha so‘rovingiz yuborildi.");
+                clearState(chatId);
             }
+
             AnswerCallbackQuery ack = new AnswerCallbackQuery();
             ack.setCallbackQueryId(cq.getId());
             execute(ack);
@@ -108,15 +238,23 @@ public class ServiceBot extends TelegramLongPollingBot {
         }
     }
 
-    // ==== INLINE TUGMALAR ====
+    // ==== INLINE MARKUP / SEND / EDIT ====
     private InlineKeyboardMarkup buildInlineMarkup(int current) {
         InlineKeyboardButton minus = new InlineKeyboardButton("-2");
         minus.setCallbackData("dec");
+
         InlineKeyboardButton plus = new InlineKeyboardButton("+2");
         plus.setCallbackData("inc");
 
+        InlineKeyboardButton confirmK = new InlineKeyboardButton("Tasdiqlash (Konspekt)");
+        confirmK.setCallbackData("confirm_konspekt");
+
+        InlineKeyboardButton confirmS = new InlineKeyboardButton("Tasdiqlash (Slayd)");
+        confirmS.setCallbackData("confirm_slides");
+
         List<List<InlineKeyboardButton>> rows = new ArrayList<>();
         rows.add(Arrays.asList(minus, plus));
+        rows.add(Arrays.asList(confirmK, confirmS));
         return new InlineKeyboardMarkup(rows);
     }
 
@@ -128,10 +266,26 @@ public class ServiceBot extends TelegramLongPollingBot {
             edit.setText("📄 Betlar soni: " + current);
             edit.setReplyMarkup(buildInlineMarkup(current));
             execute(edit);
-        } catch (Exception e) { e.printStackTrace(); }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
     }
 
-    // ==== ISH TUGADI ====
+    private void sendKonspektInline(String chatId) {
+        int current = pageCount.getOrDefault(chatId, 2);
+        SendMessage sm = new SendMessage(chatId, "📘 Nechta bet kerak? (juft sonlarda ishlaydi)");
+        sm.setReplyMarkup(buildInlineMarkup(current));
+        try { execute(sm); } catch (Exception e) { e.printStackTrace(); }
+    }
+
+    private void sendSlidesInline(String chatId, String topic) {
+        int current = pageCount.getOrDefault(chatId, 2);
+        SendMessage sm = new SendMessage(chatId, "🎞 Mavzu: " + topic + "\nNechta slayd kerak?");
+        sm.setReplyMarkup(buildInlineMarkup(current));
+        try { execute(sm); } catch (Exception e) { e.printStackTrace(); }
+    }
+
+    // ==== HELPERS ====
     public static void ishtugadiStatic(String chatId) {
         try {
             ServiceBot bot = new ServiceBot();
@@ -141,22 +295,30 @@ public class ServiceBot extends TelegramLongPollingBot {
         }
     }
 
+    private void clearState(String chatId) {
+        selectedService.remove(chatId);
+        tempAnswers.remove(chatId);
+        pageCount.remove(chatId);
+        chattingWithAdmin.remove(chatId);
+    }
+
     // ==== MENULAR ====
     private void handleStart(String chatId, User from) {
-        String greeting = "Assalomu alaykum, " + from.getFirstName() + "!\nQuyidagi menulardan tanlang 👇";
+        String uname = (from.getUserName() != null) ? "@" + from.getUserName() : from.getFirstName();
+        String greeting = String.format("Assalomu alaykum %s!\nQanday yordam kerak? Menudan tanlang.", uname);
         sendTextWithKeyboard(chatId, greeting, mainKeyboard());
     }
 
     private ReplyKeyboardMarkup mainKeyboard() {
         ReplyKeyboardMarkup keyboard = new ReplyKeyboardMarkup();
         keyboard.setResizeKeyboard(true);
-        KeyboardRow r1 = new KeyboardRow();
-        r1.add(new KeyboardButton("Promo Code"));
-        r1.add(new KeyboardButton("Hizmatlar"));
-        KeyboardRow r2 = new KeyboardRow();
-        r2.add(new KeyboardButton("Profile"));
-        r2.add(new KeyboardButton("📩 Adminga yozish"));
-        keyboard.setKeyboard(Arrays.asList(r1, r2));
+        KeyboardRow row1 = new KeyboardRow();
+        row1.add(new KeyboardButton("Promo Code"));
+        row1.add(new KeyboardButton("Hizmatlar"));
+        KeyboardRow row2 = new KeyboardRow();
+        row2.add(new KeyboardButton("Profile"));
+        row2.add(new KeyboardButton("📩 Adminga yozish"));
+        keyboard.setKeyboard(List.of(row1, row2));
         return keyboard;
     }
 
@@ -186,13 +348,16 @@ public class ServiceBot extends TelegramLongPollingBot {
     }
 
     private void showProfile(String chatId, User from) {
-        String text = String.format("👤 Profil\nIsm: %s\nUsername: %s",
+        boolean used = false;
+        try { used = Config.isPromoUsed(Long.parseLong(chatId)); } catch (Exception ignored) {}
+        String text = String.format("👤 Profil\nIsm: %s\nUsername: %s\nPromo: %s",
                 from.getFirstName(),
-                from.getUserName() == null ? "-" : "@" + from.getUserName());
+                (from.getUserName() == null ? "-" : "@" + from.getUserName()),
+                used ? "Bor" : "Yo'q");
         sendText(chatId, text);
     }
 
-    // ==== YORDAMCHI ====
+    // ==== SEND HELPERS ====
     protected void sendText(String chatId, String text) {
         try { execute(new SendMessage(chatId, text)); } catch (Exception e) { e.printStackTrace(); }
     }
